# deterministic-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  build.sh  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
API_integration/: access_revoked_api_workflow.md  apar_not_visible_api_workflow.md  cap_not_visible_api_workflow.md  certificate_name_incorrect_api_workflow.md  certificate_not_generated_api_workflow.md  course_progress_issue_api_workflow.md  email_mobile_update_api_workflow.md  event_related_issues_api_workflow.md  find_course_api_workflow.md  karma_points_issue_api_workflow.md  profile_update_api_workflow.md  profile_verification_api_workflow.md  resource_not_opening_api_workflow.md  weekly_clap_issue_api_workflow.md
app/: __init__.py  config.py  logging_setup.py  main.py
app/adapters/: __init__.py  llm.py  presidio.py  translation.py  zoho.py
app/api/: __init__.py  auth.py  routes.py  schemas.py
app/engine/: __init__.py  activity.py  compiler.py  expression.py  runner.py  state.py  template.py
app/services/: __init__.py  engineering_db.py  karmayogi.py  registry.py  session_store.py  tracing.py  yp_lookup.py
dev_ui/: README.md  index.html
docs/: DESIGN.md  INTEGRATION_CONTRACT.md  PLAN.md
flows/: README.md  mode_b_access_revoked.yaml  mode_b_apar_not_visible.yaml  mode_b_auto_logout_crash.yaml  mode_b_cap_not_visible.yaml  mode_b_certificate_download.yaml  mode_b_course_progress_issue.yaml  mode_b_designation_not_verified.yaml  mode_b_download_report.yaml  mode_b_event_related_issues.yaml  mode_b_feedback_rating.yaml  mode_b_find_course.yaml  mode_b_karma_points_issue.yaml  mode_b_karmayogi_badge_check.yaml  mode_b_leaderboard.yaml  mode_b_learning_hours.yaml  mode_b_multiple_account.yaml  mode_b_profile_completion.yaml  mode_b_profile_verification.yaml  mode_b_resource_not_opening.yaml  mode_b_unenroll_request.yaml  mode_b_weekly_clap_issue.yaml
flows/_shared/: _enrollment_picker.yaml  _karmayogi_user.yaml  _mdo_admin_lookup.yaml  _multiple_account.yaml  _otp_flow.yaml  _terminal.yaml  _yp_lookup.yaml  _zoho_ticket.yaml  satisfaction_check.yaml  system_messages.yaml
flows/on_hold/: mode_a_certificate_download.yaml  mode_a_course_progress_issue.yaml  mode_a_login_issue.yaml  mode_b_access_revoked.yaml  mode_b_bulk_profile_update.yaml  mode_b_email_mobile_update.yaml  mode_b_find_course.yaml  (+8 more)
integrations/: zoho_ticket_properties_mapping.json
postman/: iGOT_Chatbot_API.postman_collection.json  iGOT_Chatbot_WebProxy_API.postman_collection.json
prompts/: transfer_llm_summary.jinja
scripts/: llm_judge_runner.py  test_local.py
(+21 files in other folders)
