[project]
name = "igot-deterministic-chatbot"
version = "0.1.0"
description = "iGOT Karmayogi Bharat support assistant — iGOT Deterministic Chatbot: LangGraph + YAML deterministic-first chatbot"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Aswin Pradeep", email = "aswin.pradeep@tarento.com" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # LangGraph engine (universal orchestrator)
    "langgraph>=1.1.3",
    # Postgres checkpointer — persistent conversation state (survives restarts)
    # Falls back to MemorySaver automatically if Postgres is unavailable.
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary,pool]>=3.1",

    # LLM (Phase 1: Vertex AI direct SDK)
    "google-cloud-aiplatform>=1.70.0",
    # vLLM-compatible (Phase 2+, self-hosted)
    "openai>=1.50.0",  # used for vLLM via OpenAI-compatible API

    # Validation + state schemas
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # YAML parsing + schema validation
    "ruamel.yaml>=0.18.6",
    "jsonschema>=4.23.0",

    # Templating + sandboxed expressions
    "Jinja2>=3.1.4",
    "simpleeval>=1.0.0",

    # HTTP
    "httpx[http2]>=0.28.0",

    # Translation (multi-language support — composite failover chain)
    # Gemini uses google-cloud-aiplatform (already listed above)
    "google-cloud-translate>=3.15.0",   # Google Cloud Translation API v3 (fallback)

    # Persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Cache / rate-limiting / pub-sub (optional — app still works without it)
    "redis[hiredis]>=5.2.0",

    # PII redaction (Phase 1)
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Observability
    "langfuse>=2.50.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",

    # Auth
    "pyjwt[crypto]>=2.9.0",

    # Excel (for YP allocation lookup salvaged from legacy)
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
